--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "discord.js": "11.1.0",
     "ffmpeg-binaries": "3.2.2-3",
     "fs": "0.0.1-security",
+    "random-number": "0.0.9",
     "get-youtube-id": "^1.0.0",
     "moment": "2.22.1",
     "moment-duration-format": "^2.2.2",
